coverage works locally